# simple_grasping

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
.github/workflows/: ci.yml  industrial_ci_action.yaml
include/simple_grasping/: cloud_tools.h  object_support_segmentation.h  shape_extraction.h  shape_grasp_planner.h
scripts/: do_perception.py
src/: basic_grasping_perception.cpp  cloud_tools.cpp  grasp_planner_node.cpp  object_support_segmentation.cpp  shape_extraction.cpp  shape_grasp_planner.cpp
test/: test_shape_extraction.cpp
