<package format="3">

  <name>simple_grasping</name>
  <version>0.4.0</version>
  <description>
    Basic grasping applications and demos.
  </description>
  <author>Michael Ferguson</author>
  <maintainer email="mike@vanadiumlabs.com">Michael Ferguson</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/simple_grasping</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>eigen</build_depend>

  <depend>geometry_msgs</depend>
  <depend>grasping_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_action</depend>
  <depend>sensor_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_cmake_cpplint</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
